# AzureBlobUtils

./: .gitignore  README.md  example.py  index.html  requirements.txt  setup.cfg  setup.py
AzureBlobUtils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
AzureUtils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
TestCases/: AzureUtilsTest.html  pytest.ini  test_azureUtils.py
TestCases/test/raw/: Product_data.csv  customer_new.csv  sales_data.csv
azure_strg_utils/: __init__.py  azure_strg_utils.py  exceptions.py  version.py
azure_strg_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
azurenv/: pyvenv.cfg
azurenv/Scripts/: activate  activate.bat  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py
docs/: CNAME
html/azure_strg_utils/: azure_strg_utils.html
src/: AzureUtils.py
