# setup.cfg
[metadata]
name = azure_strg_utils
version = 0.1
author = Vijay Kumar
author_email = vijay.kumar.1997@outlook.com
keywords = azure,storage,blob,container,

# add a description of your package
description = The package facilitates interaction with Azure storage accounts, enabling the execution of a wide range of operations on these accounts.
long_description = file: README.md
long_description_content_type = text/markdown

# add the url to your repository/homepage and version release
url = https://github.com/1997vijay/AzureBlobUtils.git


# define your license and license file
license = MIT
license_files = LICENSE.txt

classifiers = 
    # for a full list of classifiers see https://pypi.org/classifiers/
    Development Status :: 4 - Beta
    Intended Audience :: Developers      
    Topic :: Software Development
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
install_requires =
    # list the dependencies required by your package
    azure-storage-blob >=12.0.0
    pandas
python_requires = >=3.9